# climate-prediction-market

./: .env.example  .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mts
app/: globals.css  layout.tsx  page.tsx
components/: Dashboard.tsx
components/globe/: ClimateGlobe.tsx  GlobeHero.tsx
components/icons/: HazardIcon.tsx
components/layout/: Navbar.tsx
components/markets/: MarketBoard.tsx  MarketChart.tsx  MarketControls.tsx  MarketDetails.tsx  MarketFilters.tsx  MarketListItem.tsx  RegionalMarketDrawer.tsx  TrendingMarkets.tsx
components/portfolio/: PortfolioPanel.tsx
components/providers/: GlobeLinkProvider.tsx  MarketProvider.tsx  PositionProvider.tsx  SolanaProvider.tsx
components/ui/: ClymaMark.tsx  (+1 more)
hooks/: useMarketProgram.ts
ml/: benchmark_frontier_models.py  demo_inference.py  evaluate_minimax.py  plot_loss_curve.py  plot_minimax_comparison.py
programs/climate_market/: Cargo.toml  vitest.config.mts
programs/climate_market/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/climate_market/src/instructions/: buy_position.rs  close_market.rs  common.rs  create_market.rs  fund_market.rs  initialize_protocol.rs  mod.rs  resolve_market.rs  settle.rs
scripts/: seed-db.mjs  seed-markets.mjs
tests/: api-routes.test.ts  climate-market.ts  globe-drawer.test.tsx  hazard-icons.test.tsx  market-calculations.test.ts  navbar.test.tsx  prediction-form.test.tsx  setup.ts
types/: world-atlas.d.ts
(+43 files in other folders)
