[package]
name = "climate_market"
version = "0.1.0"
description = "Native-SOL pooled binary climate prediction market for Solana Devnet"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "climate_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }

